# ball_game

./: CMakeLists.txt  CMakeSettings.json  README.md  main.cpp
QTMenu/: CMakeLists.txt  QTMenu.pro  helpers.h  main.cpp  menu.cpp  menu.h  menuitem.cpp  menuitem.h  qtmenu.cpp  qtmenu.h
game/: CMakeLists.txt  ai.cpp  ai.h  ball.cpp  ball.h  command.cpp  command.h  controller.h  controllerSetup.h  game.cpp  game.h  gameImpl.cpp  gameImpl.h  gameState.cpp  gameState.h  mainMenu.h  menuBase.h  observer.h  paddle.h  physicalObject.cpp  playerKB.cpp  playerKB.h  playermouse.cpp  playermouse.h  powerItem.h  renderer.cpp  sound.h
include/: enums.h  inputSettings.h  options.h
menu/: CMakeLists.txt  mainMenu.cpp  mainMenu.h  menu.cpp  menu.h  menuBase.cpp  menuBase.h  menuImpl.cpp  menuImpl.h  optionMenu.cpp  optionMenu.h
src/: CMakeLists.txt  ai.cpp  ai.h  ball.cpp  ball.h  command.cpp  command.h  controller.h  controllerSetup.h  enums.h  game.cpp  game.h  gameState.cpp  gameState.h  inputSettings.h  main.cpp  mainMenu.cpp  mainMenu.h  menu.cpp  menu.h  menuBase.cpp  menuBase.h  observer.h  options.cpp  options.h  paddle.h  physicalObject.cpp  physicalObject.h  playerKB.cpp  playerKB.h  playermouse.cpp  playermouse.h  powerItem.h  renderer.cpp  renderer.h  sound.h
tests/: CMakeLists.txt  aiTest.cpp  ballTest.cpp  commandTest.cpp  gameStateTest.cpp  physicalObjectTest.cpp  playerTest.cpp
